# opengl-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md
apps/: CMakeLists.txt
apps/bvh_test/: CMakeLists.txt  main.cpp
apps/bvh_test/shaders/: bvh.comp  bvh.frag  bvh_test.comp  fb.frag
apps/ecs_test/: CMakeLists.txt  main.cpp
apps/editor/: CMakeLists.txt  adv_scene_renderer.hpp  app.cpp  app.hpp  custom_events.hpp  editor_camera.hpp  main.cpp  scene_renderer.hpp  scene_renderer_gi.hpp
apps/editor/panels/: content_browser_panel.cpp  content_browser_panel.hpp  editor_color_picker_panel.cpp  panel.hpp  (+9 more)
apps/new_editor/: CMakeLists.txt  app.cpp  app.hpp  imgui_panels.hpp  main.cpp  scene_renderer.hpp
apps/python_test/: CMakeLists.txt  app.cpp  main.cpp
apps/shadow_test/: CMakeLists.txt  app.cpp  main.cpp  scene_renderer.hpp
apps/test/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
apps/test_fw/: CMakeLists.txt  main.cpp
apps/testing_app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
apps/texture_test/: CMakeLists.txt  main.cpp
apps/vxgi/: CMakeLists.txt  app.cpp  custom_events.hpp
engine/: CMakeLists.txt  __init__.py
engine/core/: asset_manager.cpp  asset_manager.hpp  components.cpp  components.hpp  ecs.hpp  entity.hpp  event.hpp  events.hpp  execution_queue.cpp  execution_queue.hpp  imgui_utils.cpp  imgui_utils.hpp  layer.cpp  layer.hpp  panel.cpp  panel.hpp  serializer.cpp  serializer.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
engine/gfx/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp  type.hpp  vertex_attribute.hpp
engine/renderer/: base_renderer.cpp  base_renderer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderpass.hpp
projects/editor/: CMakeLists.txt  app.cpp  editor_camera.hpp  mouse_picking_pass.hpp  mouse_picking_pipeline.hpp  testing_panel.hpp
(+194 files in other folders)
