cmake_minimum_required(VERSION 3.10)    

project(app)

# add_subdirectory(texture_test)
# add_subdirectory(python_test)
# add_subdirectory(editor)
# add_subdirectory(new_editor)
# add_subdirectory(ecs_test)
# add_subdirectory(shadow_test)
# add_subdirectory(bvh_test)

add_subdirectory(test)
add_subdirectory(editor)
add_subdirectory(vxgi)